update admin api
